# ecom-fraud-anomoly-detection

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  train_tabular_mlp.py  train_ts_mlp.py
configs/: train_tabular_baseline.yaml  train_ts_baseline.yaml
docs/: cli_and_scripts.md  config_and_structure.md  contributing_and_dev.md  data_and_features.md  index.md  mlflow_and_experiment_tracking.md  quickstart_time_series.md  training_and_pipelines.md
notebooks/: 00_tabular_quickstart.ipynb  01_tabular_eda_and_features.ipynb  10_time_series_quickstart.ipynb  11_time_series_eda_and_windows.ipynb  90_dev_scratchpad.ipynb
src/ecom_fraud/: config.py  exceptions.py
src/ecom_fraud/data/: splits.py
src/ecom_fraud/evaluation/: metrics.py  permutation_importance.py  plots.py
src/ecom_fraud/features/: ecom_fraud_features.py  tabular.py  time_series.py  utils.py
src/ecom_fraud/mlops/: mlflow_utils.py
src/ecom_fraud/models/: __init__.py  tree_utils.py
src/ecom_fraud/torch/: tabular_inputs.py
src/ecom_fraud/torch/datasets/: tabular.py
src/ecom_fraud/torch/models/: tabular_embedding_mlp.py
src/ecom_fraud/torch/training/: history_utils.py  hparam_search.py  loops.py  metrics.py
src/ml_tabular/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py
src/ml_tabular/data/: __init__.py  kaggle.py  loading.py  mongodb.py  sql.py
src/ml_tabular/features/: __init__.py  tabular.py  time_series.py
src/ml_tabular/mlops/: __init__.py  mlflow_utils.py
src/ml_tabular/sklearn_utils/: __init__.py  tabular_pipeline.py
src/ml_tabular/torch/: __init__.py
src/ml_tabular/torch/datasets/: __init__.py  tabular.py  time_series.py
src/ml_tabular/torch/training/: __init__.py  loops.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_logging_config.py
tests/cli/: test_cli.py
tests/data/: test_tabular_dataset.py  test_time_series_dataset.py
tests/mlops/: test_mlflow_utils.py
tests/training/: test_training_loops.py
